--- a/resources/css/custom.css
+++ b/resources/css/custom.css
@@ -14,4 +14,15 @@ body {
     width: 100%;
     height: 100px;
     background-color: #fff;
+
+}
+
+
+.item-a {
+    display: block;
+    text-decoration: none;
+}
+
+.footer li {
+    background-color: black;
 }
